// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should compute historical networth 3`] = `
[
  {
    "change": 0,
    "changePercentage": 0,
    "time": 1504137600,
    "timestamp": 1504137600000,
    "value": 0,
  },
  {
    "change": 173.96,
    "changePercentage": 0,
    "time": 1504224000,
    "timestamp": 1504224000000,
    "value": 173.96,
  },
  {
    "change": -13.06,
    "changePercentage": -7.51,
    "time": 1504310400,
    "timestamp": 1504310400000,
    "value": 160.9,
  },
  {
    "change": 1.33,
    "changePercentage": 0.83,
    "time": 1504396800,
    "timestamp": 1504396800000,
    "value": 162.23,
  },
  {
    "change": -14.71,
    "changePercentage": -9.07,
    "time": 1504483200,
    "timestamp": 1504483200000,
    "value": 147.52,
  },
  {
    "change": 9.58,
    "changePercentage": 6.49,
    "time": 1504569600,
    "timestamp": 1504569600000,
    "value": 157.1,
  },
  {
    "change": 9.12,
    "changePercentage": 5.81,
    "time": 1504656000,
    "timestamp": 1504656000000,
    "value": 166.22,
  },
  {
    "change": 176.07,
    "changePercentage": 105.93,
    "time": 1504742400,
    "timestamp": 1504742400000,
    "value": 342.29,
  },
  {
    "change": -29.82,
    "changePercentage": -8.71,
    "time": 1504828800,
    "timestamp": 1504828800000,
    "value": 312.47,
  },
  {
    "change": -1.75,
    "changePercentage": -0.56,
    "time": 1504915200,
    "timestamp": 1504915200000,
    "value": 310.72,
  },
  {
    "change": -9.37,
    "changePercentage": -3.02,
    "time": 1505001600,
    "timestamp": 1505001600000,
    "value": 301.35,
  },
  {
    "change": 5.69,
    "changePercentage": 1.89,
    "time": 1505088000,
    "timestamp": 1505088000000,
    "value": 307.04,
  },
  {
    "change": -3.26,
    "changePercentage": -1.06,
    "time": 1505174400,
    "timestamp": 1505174400000,
    "value": 303.78,
  },
  {
    "change": -15.98,
    "changePercentage": -5.26,
    "time": 1505260800,
    "timestamp": 1505260800000,
    "value": 287.8,
  },
  {
    "change": -55.13,
    "changePercentage": -19.16,
    "time": 1505347200,
    "timestamp": 1505347200000,
    "value": 232.67,
  },
]
`;

exports[`should refresh networth 3`] = `
[
  {
    "change": 0,
    "changePercentage": 0,
    "time": 1504137600,
    "timestamp": 1504137600000,
    "value": 0,
  },
  {
    "change": 173.96,
    "changePercentage": 0,
    "time": 1504224000,
    "timestamp": 1504224000000,
    "value": 173.96,
  },
  {
    "change": -13.06,
    "changePercentage": -7.51,
    "time": 1504310400,
    "timestamp": 1504310400000,
    "value": 160.9,
  },
  {
    "change": 1.33,
    "changePercentage": 0.83,
    "time": 1504396800,
    "timestamp": 1504396800000,
    "value": 162.23,
  },
  {
    "change": -14.71,
    "changePercentage": -9.07,
    "time": 1504483200,
    "timestamp": 1504483200000,
    "value": 147.52,
  },
  {
    "change": 9.58,
    "changePercentage": 6.49,
    "time": 1504569600,
    "timestamp": 1504569600000,
    "value": 157.1,
  },
  {
    "change": 9.12,
    "changePercentage": 5.81,
    "time": 1504656000,
    "timestamp": 1504656000000,
    "value": 166.22,
  },
  {
    "change": 176.07,
    "changePercentage": 105.93,
    "time": 1504742400,
    "timestamp": 1504742400000,
    "value": 342.29,
  },
  {
    "change": -29.82,
    "changePercentage": -8.71,
    "time": 1504828800,
    "timestamp": 1504828800000,
    "value": 312.47,
  },
  {
    "change": -1.75,
    "changePercentage": -0.56,
    "time": 1504915200,
    "timestamp": 1504915200000,
    "value": 310.72,
  },
  {
    "change": -9.37,
    "changePercentage": -3.02,
    "time": 1505001600,
    "timestamp": 1505001600000,
    "value": 301.35,
  },
  {
    "change": 5.69,
    "changePercentage": 1.89,
    "time": 1505088000,
    "timestamp": 1505088000000,
    "value": 307.04,
  },
  {
    "change": -3.26,
    "changePercentage": -1.06,
    "time": 1505174400,
    "timestamp": 1505174400000,
    "value": 303.78,
  },
  {
    "change": -15.98,
    "changePercentage": -5.26,
    "time": 1505260800,
    "timestamp": 1505260800000,
    "value": 287.8,
  },
  {
    "change": 0,
    "changePercentage": 0,
    "time": 1505347200,
    "timestamp": 1505347200000,
    "value": 232.67,
  },
]
`;
